Fixed bug on Firefox

--- a/src/resource/assets/styles/styles.css
+++ b/src/resource/assets/styles/styles.css
@@ -253,7 +253,7 @@ body{
 }
 
 .smallBoard{
-    min-width: 150px;
+    width: 150px;
     height: 150px;
     font-size: 0.5rem;
     opacity: 50%;
